# try_ManimML

./: README.md  pyproject.toml
src/example/: scene.py
